kubernetes/archive/deploy/esphome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: esphome
spec:
  rules:
  - host: esphome.vandeneede.org
    http:
      paths:
      - backend:
          service:
            name: esphome
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
